--- a/Info.plist
+++ b/Info.plist
@@ -32,6 +32,7 @@
 			<key>Start</key>
 			<array>
 				<string>jquery-2.1.1.min.js</string>
+				<string>bootstrap-3.2.0.min.js</string>
 			</array>
 		</dict>
 		<key>Stylesheets</key>
