Add update file;

--- a/Info.plist
+++ b/Info.plist
@@ -7,13 +7,13 @@
 	<key>Builder Version</key>
 	<string>10600.1.8</string>
 	<key>CFBundleDisplayName</key>
-	<string>Bitcoin Address Labeler</string>
+	<string>myTrezor Address Labeler</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.teknonsys.bitcoinaddresslabeler</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.9</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>Chrome</key>
@@ -40,6 +40,8 @@
 			<string>labler.css</string>
 		</array>
 	</dict>
+	<key>Description</key>
+	<string>Add labels to addresses in myTrezor. Not affiliated with SatoshiLabs.</string>
 	<key>DeveloperIdentifier</key>
 	<string>62GK6X43FY</string>
 	<key>ExtensionInfoDictionaryVersion</key>
@@ -58,5 +60,7 @@
 			<string>Some</string>
 		</dict>
 	</dict>
+	<key>Update Manifest URL</key>
+	<string>http://public.teknonsys.com/balUpdate.plist</string>
 </dict>
 </plist>
